--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/01/Light/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 15 May 2022 09:04:32 GMT -->
 <head>
   <!-- Title of The Page -->
   <title> SAKIB | Personal Portfolio</title>
@@ -75,9 +73,9 @@
         src="./images/yellow.png" alt="yellow" /></li>
     </ul>
     <h4>Light Mode</h4>
-        <!-- <div class="switch" id="switcherrr">
-          <a href="https://avstechnolabs.com/Themeforest/Gaspar/01/Dark/index.html"><i class="fas fa-moon open"></i></a>
-        </div> -->
+        <div class="switch" id="switcherrr">
+          <a href="https://sadman-sakib2645.github.io/Portfolio_dark/"><i class="fas fa-moon open"></i></a>
+        </div>
         <h4 class="title">Magic Cursor</h4>
         <ul class="cursor">
           <li><a class="showme show" href="#"></a></li>
