--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
                           <ul class="about-you ">
                           <li>
                               <span class="title">E-mail :</span>
-                              <span class="value"><a href="sakibsadman565@gmail.com">sakibsadman565@gmail.com</a></span>
+                              <span class="value"><a href="procodersakib@gmail.com"">procodersakib@gmail.com"</a></span>
                           </li>
                           <li>
                               <span class="title">Phone :</span>
-                              <span class="value"><a href="tel:(+880)1305-964879">(+880)1305-964879</a></span>
+                              <span class="value"><a href="tel:(+880)1617500143">(+880)1617500143</a></span>
                           </li>
                           <li>
                               <span class="title">skype :</span>
@@ -358,7 +358,7 @@
                     <div class="resume-item"><span class="item-arrow"></span>
                         <h5 class="item-title">Diploma In Web Design</h5><span class="item-details">Creative It Institute
                         /
-                        2018 - 2019</span>
+                        2018</span>
                         <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo
                         repudiandae.</p>
                     </div>
@@ -1105,7 +1105,7 @@
                         <div class="media d-flex align-items-center"><span class="info-icon"><i
                                 class="fas fa-phone-alt"></i></span>
                             <div class="media-body info-details">
-                            <h6 class="info-type">Call Me</h6><span class="info-value"><a href="tel:+8801889511743">+8801889511743 </a></span>
+                            <h6 class="info-type">Call Me</h6><span class="info-value"><a href="tel:+8801617500143">+8801617500143 </a></span>
                             </div>
                         </div>
                         </li>
@@ -1114,7 +1114,7 @@
                                 class="fas fa-envelope"></i></span>
                             <div class="media-body info-details">
                             <h6 class="info-type">Email Me</h6><span class="info-value"><a
-                                href="mailto:sakibsadman565@gmail.com">Anik@example.com</a></span>
+                                href="mailto:procodersakib@gmail.com">procodersakib@gmail.com"</a></span>
                             </div>
                         </div>
                         </li>
