--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <!-- Profile-Pic -->
               <div class=" col-xl-5 col-lg-6 col-md-6 col-12">
                 <div class="home-profile animate__animated animate__fadeInLeft animate__delay-1s">
-                  <img src="./Images/sakib.jpg" alt="home-profile">
+                  <img src="./Images/sadman-sakib.jpg" alt="home-profile">
                 </div>
               </div>
               <!-- Profile-Pic End-->
@@ -230,7 +230,7 @@
                 <div class="col-lg-4 profile-photo animate__animated animate__fadeInLeft animate__delay-2s ">
                   <div class="row">
                     <div class="col-12 d-block col-sm-none">
-                      <img src="./Images/about.jpg" class="img-fluid main-img-mobile" alt="my picture">
+                      <img src="./Images/about.jpeg" class="img-fluid main-img-mobile" alt="my picture">
                     </div>
                   </div>
                 </div>
