--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                   <!-- Social media icons-->
                   <div class="fixed-block animate__animated animate__jackInTheBox animate__delay-2-5s">
                     <ul class="list-unstyled social-icons">
-                      <li><a href="javascript:void(0)"><i class="fab fa-twitter"></i></a></li>
-                      <li><a href="javascript:void(0)"><i class="fab fa-facebook-square "></i></a></li>
-                      <li><a href="javascript:void(0)"><i class="fab fa-linkedin "></i></a></li>
-                      <li><a href="javascript:void(0)"><i class="fab fa-github-square "></i></a></li>
-                      <li><a href="javascript:void(0)"><i class="fab fa-instagram-square"></i></a></li>
+                      <li><a href="https://twitter.com/ProcoderSakib?t=PFllId9JRIPizDex0ojkrg&s=09"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/procodersakib"><i class="fab fa-facebook-square "></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/procoder-sakib-b93a30241"><i class="fab fa-linkedin "></i></a></li>
+                        <li><a href="https://github.com/sadman-sakib2645"><i class="fab fa-github-square "></i></a></li>
+                        <li><a href="https://www.instagram.com/procodersakib/"><i class="fab fa-instagram-square"></i></a></li>
                     </ul>
                   </div>
                   <p class="lorem-text animate__animated animate__zoomIn animate__delay-2-5s">I am a freelancer based in
@@ -309,11 +309,11 @@
                           <!-- Social media icons-->
                           <div class="col-lg-7 col-sm-6 col-12">
                               <ul class="list-unstyled social-icons">
-                              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                              <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                              <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                              <li><a href="#"><i class="fab fa-github-square"></i></a></li>
-                              <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+                                <li><a href="https://twitter.com/ProcoderSakib?t=PFllId9JRIPizDex0ojkrg&s=09"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/procodersakib"><i class="fab fa-facebook-square "></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/procoder-sakib-b93a30241"><i class="fab fa-linkedin "></i></a></li>
+                                <li><a href="https://github.com/sadman-sakib2645"><i class="fab fa-github-square "></i></a></li>
+                                <li><a href="https://www.instagram.com/procodersakib/"><i class="fab fa-instagram-square"></i></a></li>
                               </ul>
                           </div>
                           </div>
@@ -1123,11 +1123,11 @@
                     <!-- Social media icons-->
                     <div class="fixed-block d-flex animate__animated animate__jackInTheBox animate__delay-3s">
                     <ul class="list-unstyled social-icons p-3">
-                        <li><a href="javascript:void(0)"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="javascript:void(0)"><i class="fab fa-facebook-square"></i></a></li>
-                        <li><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="javascript:void(0)"><i class="fab fa-github-square"></i></a></li>
-                        <li><a href="javascript:void(0)"><i class="fab fa-instagram-square"></i></a></li>
+                      <li><a href="https://twitter.com/ProcoderSakib?t=PFllId9JRIPizDex0ojkrg&s=09"><i class="fab fa-twitter"></i></a></li>
+                      <li><a href="https://www.facebook.com/procodersakib"><i class="fab fa-facebook-square "></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/procoder-sakib-b93a30241"><i class="fab fa-linkedin "></i></a></li>
+                      <li><a href="https://github.com/sadman-sakib2645"><i class="fab fa-github-square "></i></a></li>
+                      <li><a href="https://www.instagram.com/procodersakib/"><i class="fab fa-instagram-square"></i></a></li>
                     </ul>
                     </div>
                 </div>
